# qframe

./: .gitignore  README.md  cspell.json  pyproject.toml
src/qframe/: __init__.py
src/qframe/alg_primitives/: __init__.py  adder.py  ch.py  maj.py  rotr.py
src/qframe/core/: __init__.py  operation_wrapper.py  qframe_session.py  qframe_uint.py  qframe_variable.py  utility.py
tests/alg_primitives/: test_adder.py  test_ch.py  test_maj.py  test_rotr.py
tests/core/: test_iteration.py  test_qfs_adder.py  test_qfs_ch.py  test_qfs_maj.py  test_qfs_rotr.py
