[build-system]
requires = ["hatchling >=1.26"]
build-backend = "hatchling.build"

[project]
name = "qframe"
version = "0.0.2"
authors = [
  { name="Fintan Bolton", email="fintan.bolton@bradan-quantum.com" },
]
description = "A framework for quantum algorithms"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: EPL-2.0",
    "Operating System :: OS Independent",
]
license = "EPL-2.0"
license-files = ["LICEN[CS]E*"]
# Version history of Qrisp: https://pypi.org/project/qrisp/#history
dependencies = [
  "qrisp >=0.7.11, <0.8",
  "z3-solver==4.15.4.0",
  "flask >=3.1.3, <3.2",     # Pick up latest security fixes
  "werkzeug >=3.1.6, <3.2"   # Pick up latest security fixes
]

[project.urls]
Homepage = "https://github.com/bradan-quantum/qframe"
Issues = "https://github.com/bradan-quantum/qframe/issues"

[tool.hatch.envs.test]
dependencies = [
  "coverage[toml]",
  "pytest",
  "pytest-cov",
  "pytest-mock",
]

[tool.pytest.ini_options]
pythonpath = "src"
filterwarnings = [
  "ignore:core.Jaxpr is missing a DebugInfo object."
]

# [tool.setuptools.packages.find]
# where = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/qframe"]

# Needed to avoid the following error condition:
# AttributeError: module 'hatchling.build' has no attribute 'prepare_metadata_for_build_editable'
[tool.hatch.metadata]
allow-direct-references = true
